# psychic-barnacle

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_pipeline.py
.github/workflows/: ruff.yml
src/acquisition/: acquire_data.py
src/google/: gemini_api.py
src/preprocessing/: text_cleaning.py
src/utils/: config.py  search_google.py  utils.py
